# Oscribe

./: .gitignore  LICENSE  Makefile  README.md  install.sh  pyproject.toml
.github/workflows/: release.yml
contrib/: oscribe.service
docs/plans/: 2026-02-24-dictate-implementation.md  2026-02-24-optimize-and-restructure-design.md  2026-02-26-model-selection-design.md  2026-02-26-model-selection-plan.md  2026-02-26-streaming-and-polish-design.md  2026-02-26-streaming-and-polish-plan.md
packaging/aur/: PKGBUILD  oscribe.install
src/: config.yaml
src/oscribe/: __init__.py  __main__.py  cli.py  config.py  desktop.py  service.py  trigger.py
src/oscribe/audio/: capture.py  sounds.py  transcriber.py
src/oscribe/gui/: download.py  icon.py  settings.py  window.py
website/: .dockerignore  Dockerfile  index.html  tailwind.config.cjs
website/scripts/: icons.js  script.js  tailwind.config.js
website/styles/: input.css  style.css
