[project]
name = "oscribe"
version = "0.1.0"
description = "Fast speech-to-text with system tray integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.1.0",
    "onnxruntime>=1.20,<1.24",
    "numpy>=2.0.0",
    "pyperclip>=1.9.0",
    "pyqt6>=6.7.0",
    "pyzmq>=26.0.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "sounddevice>=0.5.0",
]

[project.optional-dependencies]
cuda = [
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
]
rocm = []  # ROCm CTranslate2 wheel installed by install.sh from GitHub releases

[project.scripts]
oscribe = "oscribe.service:main"
oscribe-trigger = "oscribe.trigger:main"
oscribe-cli = "oscribe.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.11",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oscribe"]

[tool.ruff]
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
